TODO
* add tests
* update manuals
* update msvscpp files

20130401
* 2013 update
* updated dependencies

20121211
* created stand-alone version based on libfguid
