@@ -48,7 +48,7 @@ const char *libfcache_get_version(
  * Error functions
  * ------------------------------------------------------------------------- */
 
-/* Frees the error including elements
+/* Frees an error
  */
 LIBFCACHE_EXTERN \
 void libfcache_error_free(
@@ -91,199 +91,135 @@ int libfcache_error_backtrace_sprint(
      size_t size );
 
 /* -------------------------------------------------------------------------
- * Identifier functions
+ * Cache functions
  * ------------------------------------------------------------------------- */
 
-/* Initialize an identifier
+/* Creates a cache
+ * Make sure the value cache is referencing, is set to NULL
  * Returns 1 if successful or -1 on error
  */
 LIBFCACHE_EXTERN \
-int libfcache_identifier_initialize(
-     libfcache_identifier_t **identifier,
+int libfcache_cache_initialize(
+     libfcache_cache_t **cache,
+     int maximum_cache_entries,
      libfcache_error_t **error );
 
-/* Frees an identifier
+/* Frees a cache
  * Returns 1 if successful or -1 on error
  */
 LIBFCACHE_EXTERN \
-int libfcache_identifier_free(
-     libfcache_identifier_t **identifier,
+int libfcache_cache_free(
+     libfcache_cache_t **cache,
      libfcache_error_t **error );
 
-/* Copies the identifier from a byte stream
+/* Clones (duplicates) the cache, not the cache values
  * Returns 1 if successful or -1 on error
  */
 LIBFCACHE_EXTERN \
-int libfcache_identifier_copy_from_byte_stream(
-     libfcache_identifier_t *identifier,
-     const uint8_t *byte_stream,
-     size_t byte_stream_size,
-     int byte_order,
+int libfcache_cache_clone(
+     libfcache_cache_t **destination_cache,
+     libfcache_cache_t *source_cache,
      libfcache_error_t **error );
 
-/* Copies the identifier to a byte stream
+/* Clears the cache of the cache
  * Returns 1 if successful or -1 on error
  */
 LIBFCACHE_EXTERN \
-int libfcache_identifier_copy_to_byte_stream(
-     libfcache_identifier_t *identifier,
-     uint8_t *byte_stream,
-     size_t byte_stream_size,
-     int byte_order,
+int libfcache_cache_clear(
+     libfcache_cache_t *cache,
      libfcache_error_t **error );
 
-/* Retrieves the size of an UTF-8 encoded string of the identifier
- * The string size includes the end of string character
+/* Retrieves the number of entries of the cache
  * Returns 1 if successful or -1 on error
  */
 LIBFCACHE_EXTERN \
-int libfcache_identifier_get_string_size(
-     libfcache_identifier_t *identifier,
-     size_t *string_size,
-     uint32_t string_format_flags,
+int libfcache_cache_get_number_of_entries(
+     libfcache_cache_t *cache,
+     int *number_of_entries,
      libfcache_error_t **error );
 
-/* Copies the identifier from an UTF-8 encoded string
+/* Retrieves the number of cache values
  * Returns 1 if successful or -1 on error
  */
 LIBFCACHE_EXTERN \
-int libfcache_identifier_copy_from_utf8_string(
-     libfcache_identifier_t *identifier,
-     const uint8_t *utf8_string,
-     size_t utf8_string_length,
-     uint32_t string_format_flags,
+int libfcache_cache_get_number_of_cache_values(
+     libfcache_cache_t *cache,
+     int *number_of_values,
      libfcache_error_t **error );
 
-/* Copies the identifier from an UTF-8 encoded string
+/* Retrieves the cache value for the specific index
  * Returns 1 if successful or -1 on error
  */
 LIBFCACHE_EXTERN \
-int libfcache_identifier_copy_from_utf8_string_with_index(
-     libfcache_identifier_t *identifier,
-     const uint8_t *utf8_string,
-     size_t utf8_string_length,
-     size_t *utf8_string_index,
-     uint32_t string_format_flags,
+int libfcache_cache_get_value_by_index(
+     libfcache_cache_t *cache,
+     int cache_entry_index,
+     libfcache_cache_value_t **cache_value,
      libfcache_error_t **error );
 
-/* Copies the identifier to an UTF-8 encoded string
- * The string size should include the end of string character
+/* Sets the cache value for the specific index
  * Returns 1 if successful or -1 on error
  */
 LIBFCACHE_EXTERN \
-int libfcache_identifier_copy_to_utf8_string(
-     libfcache_identifier_t *identifier,
-     uint8_t *utf8_string,
-     size_t utf8_string_size,
-     uint32_t string_format_flags,
+int libfcache_cache_set_value_by_index(
+     libfcache_cache_t *cache,
+     int cache_entry_index,
+     int file_index,
+     off64_t offset,
+     time_t timestamp,
+     intptr_t *value,
+     int (*free_value)(
+            intptr_t **value,
+            libfcache_error_t **error ),
+     uint8_t flags,
      libfcache_error_t **error );
 
-/* Copies the identifier to an UTF-8 encoded string
- * The string size should include the end of string character
+/* -------------------------------------------------------------------------
+ * Cache value functions
+ * ------------------------------------------------------------------------- */
+
+/* Retrieves the cache value identifier
  * Returns 1 if successful or -1 on error
  */
 LIBFCACHE_EXTERN \
-int libfcache_identifier_copy_to_utf8_string_with_index(
-     libfcache_identifier_t *identifier,
-     uint8_t *utf8_string,
-     size_t utf8_string_size,
-     size_t *utf8_string_index,
-     uint32_t string_format_flags,
+int libfcache_cache_value_get_identifier(
+     libfcache_cache_value_t *cache_value,
+     int *file_index,
+     off64_t *offset,
+     time_t *timestamp,
      libfcache_error_t **error );
 
-/* Copies the identifier from an UTF-16 encoded string
+/* Sets the cache value identifier
  * Returns 1 if successful or -1 on error
  */
 LIBFCACHE_EXTERN \
-int libfcache_identifier_copy_from_utf16_string(
-     libfcache_identifier_t *identifier,
-     const uint16_t *utf16_string,
-     size_t utf16_string_length,
-     uint32_t string_format_flags,
+int libfcache_cache_value_set_identifier(
+     libfcache_cache_value_t *cache_value,
+     int file_index,
+     off64_t offset,
+     time_t timestamp,
      libfcache_error_t **error );
 
-/* Copies the identifier from an UTF-16 encoded string
+/* Retrieves the cache value
  * Returns 1 if successful or -1 on error
  */
 LIBFCACHE_EXTERN \
-int libfcache_identifier_copy_from_utf16_string_with_index(
-     libfcache_identifier_t *identifier,
-     const uint16_t *utf16_string,
-     size_t utf16_string_length,
-     size_t *utf16_string_index,
-     uint32_t string_format_flags,
+int libfcache_cache_value_get_value(
+     libfcache_cache_value_t *cache_value,
+     intptr_t **value,
      libfcache_error_t **error );
 
-/* Copies the identifier to an UTF-16 encoded string
- * The string size should include the end of string character
+/* Sets the cache value
  * Returns 1 if successful or -1 on error
  */
 LIBFCACHE_EXTERN \
-int libfcache_identifier_copy_to_utf16_string(
-     libfcache_identifier_t *identifier,
-     uint16_t *utf16_string,
-     size_t utf16_string_size,
-     uint32_t string_format_flags,
-     libfcache_error_t **error );
-
-/* Copies the identifier to an UTF-16 encoded string
- * The string size should include the end of string character
- * Returns 1 if successful or -1 on error
- */
-LIBFCACHE_EXTERN \
-int libfcache_identifier_copy_to_utf16_string_with_index(
-     libfcache_identifier_t *identifier,
-     uint16_t *utf16_string,
-     size_t utf16_string_size,
-     size_t *utf16_string_index,
-     uint32_t string_format_flags,
-     libfcache_error_t **error );
-
-/* Copies the identifier from an UTF-32 encoded string
- * Returns 1 if successful or -1 on error
- */
-LIBFCACHE_EXTERN \
-int libfcache_identifier_copy_from_utf32_string(
-     libfcache_identifier_t *identifier,
-     const uint32_t *utf32_string,
-     size_t utf32_string_length,
-     uint32_t string_format_flags,
-     libfcache_error_t **error );
-
-/* Copies the identifier from an UTF-32 encoded string
- * Returns 1 if successful or -1 on error
- */
-LIBFCACHE_EXTERN \
-int libfcache_identifier_copy_from_utf32_string_with_index(
-     libfcache_identifier_t *identifier,
-     const uint32_t *utf32_string,
-     size_t utf32_string_length,
-     size_t *utf32_string_index,
-     uint32_t string_format_flags,
-     libfcache_error_t **error );
-
-/* Copies the identifier to an UTF-32 encoded string
- * The string size should include the end of string character
- * Returns 1 if successful or -1 on error
- */
-LIBFCACHE_EXTERN \
-int libfcache_identifier_copy_to_utf32_string(
-     libfcache_identifier_t *identifier,
-     uint32_t *utf32_string,
-     size_t utf32_string_size,
-     uint32_t string_format_flags,
-     libfcache_error_t **error );
-
-/* Copies the identifier to an UTF-32 encoded string
- * The string size should include the end of string character
- * Returns 1 if successful or -1 on error
- */
-LIBFCACHE_EXTERN \
-int libfcache_identifier_copy_to_utf32_string_with_index(
-     libfcache_identifier_t *identifier,
-     uint32_t *utf32_string,
-     size_t utf32_string_size,
-     size_t *utf32_string_index,
+int libfcache_cache_value_set_value(
+     libfcache_cache_value_t *cache_value,
+     intptr_t *value,
+     int (*free_value)(
+            intptr_t **value,
+            libfcache_error_t **error ),
+     uint8_t flags,
      libfcache_error_t **error );
 
 #if defined( __cplusplus )
