@@ -31,7 +31,8 @@
 #include "libfcache_libcerror.h"
 #include "libfcache_types.h"
 
-/* Initializes the cache
+/* Creates a cache
+ * Make sure the value cache is referencing, is set to NULL
  * Returns 1 if successful or -1 on error
  */
 int libfcache_cache_initialize(
@@ -130,7 +131,7 @@ on_error:
 	return( -1 );
 }
 
-/* Frees the cache
+/* Frees a cache
  * Returns 1 if successful or -1 on error
  */
 int libfcache_cache_free(
@@ -250,6 +251,48 @@ int libfcache_cache_clone(
 	return( 1 );
 }
 
+/* Clears the cache of the cache
+ * Returns 1 if successful or -1 on error
+ */
+int libfcache_cache_clear(
+     libfcache_cache_t *cache,
+     libcerror_error_t **error )
+{
+	libfcache_internal_cache_t *internal_cache = NULL;
+	static char *function                     = "libfcache_cache_clear";
+
+	if( cache == NULL )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
+		 LIBCERROR_ARGUMENT_ERROR_INVALID_VALUE,
+		 "%s: invalid cache.",
+		 function );
+
+		return( -1 );
+	}
+	internal_cache = (libfcache_internal_cache_t *) cache;
+
+	if( libcdata_array_clear(
+	     internal_cache->entries,
+	     (int (*)(intptr_t **, libcerror_error_t **)) &libfcache_cache_value_free,
+	     error ) != 1 )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+		 LIBCERROR_RUNTIME_ERROR_FINALIZE_FAILED,
+		 "%s: unable to clear entries array.",
+		 function );
+
+		return( -1 );
+	}
+	internal_cache->number_of_cache_values = 0;
+
+	return( 1 );
+}
+
 /* Retrieves the number of entries of the cache
  * Returns 1 if successful or -1 on error
  */
@@ -327,48 +370,6 @@ int libfcache_cache_get_number_of_cache_values(
 		return( -1 );
 	}
 	*number_of_cache_values = internal_cache->number_of_cache_values;
-
-	return( 1 );
-}
-
-/* Clears the cache of the cache
- * Returns 1 if successful or -1 on error
- */
-int libfcache_cache_clear(
-     libfcache_cache_t *cache,
-     libcerror_error_t **error )
-{
-	libfcache_internal_cache_t *internal_cache = NULL;
-	static char *function                     = "libfcache_cache_clear";
-
-	if( cache == NULL )
-	{
-		libcerror_error_set(
-		 error,
-		 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
-		 LIBCERROR_ARGUMENT_ERROR_INVALID_VALUE,
-		 "%s: invalid cache.",
-		 function );
-
-		return( -1 );
-	}
-	internal_cache = (libfcache_internal_cache_t *) cache;
-
-	if( libcdata_array_clear(
-	     internal_cache->entries,
-	     (int (*)(intptr_t **, libcerror_error_t **)) &libfcache_cache_value_free,
-	     error ) != 1 )
-	{
-		libcerror_error_set(
-		 error,
-		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
-		 LIBCERROR_RUNTIME_ERROR_FINALIZE_FAILED,
-		 "%s: unable to clear entries array.",
-		 function );
-
-		return( -1 );
-	}
-	internal_cache->number_of_cache_values = 0;
 
 	return( 1 );
 }
