@@ -1,4 +1,4 @@
-.Dd April 1, 2013
+.Dd April 4, 2013
 .Dt libfcache 3
 .Os libfcache
 .Sh NAME
@@ -25,41 +25,33 @@ Error functions
 .Ft int
 .Fn libfcache_error_backtrace_sprint "libfcache_error_t *error, char *string, size_t size"
 .Pp
-Identifier functions
+Cache functions
 .Ft int
-.Fn libfcache_identifier_initialize "libfcache_identifier_t **identifier, libfcache_error_t **error"
+.Fn libfcache_cache_initialize "libfcache_cache_t **cache, int maximum_cache_entries, libfcache_error_t **error"
 .Ft int
-.Fn libfcache_identifier_free "libfcache_identifier_t **identifier, libfcache_error_t **error"
+.Fn libfcache_cache_free "libfcache_cache_t **cache, libfcache_error_t **error"
 .Ft int
-.Fn libfcache_identifier_copy_from_byte_stream "libfcache_identifier_t *identifier, const uint8_t *byte_stream, size_t byte_stream_size, int byte_order, libfcache_error_t **error"
+.Fn libfcache_cache_clone "libfcache_cache_t **destination_cache, libfcache_cache_t *source_cache, libfcache_error_t **error"
 .Ft int
-.Fn libfcache_identifier_copy_to_byte_stream "libfcache_identifier_t *identifier, uint8_t *byte_stream, size_t byte_stream_size, int byte_order, libfcache_error_t **error"
+.Fn libfcache_cache_clear "libfcache_cache_t *cache, libfcache_error_t **error"
 .Ft int
-.Fn libfcache_identifier_get_string_size "libfcache_identifier_t *identifier, size_t *string_size, uint32_t string_format_flags, libfcache_error_t **error"
+.Fn libfcache_cache_get_number_of_entries "libfcache_cache_t *cache, int *number_of_entries, libfcache_error_t **error"
 .Ft int
-.Fn libfcache_identifier_copy_from_utf8_string "libfcache_identifier_t *identifier, const uint8_t *utf8_string, size_t utf8_string_length, uint32_t string_format_flags, libfcache_error_t **error"
+.Fn libfcache_cache_get_number_of_cache_values "libfcache_cache_t *cache, int *number_of_values, libfcache_error_t **error"
 .Ft int
-.Fn libfcache_identifier_copy_from_utf8_string_with_index "libfcache_identifier_t *identifier, const uint8_t *utf8_string, size_t utf8_string_length, size_t* utf8_string_index, uint32_t string_format_flags, libfcache_error_t **error"
+.Fn libfcache_cache_get_value_by_index "libfcache_cache_t *cache, int cache_entry_index, libfcache_cache_value_t **cache_value, libfcache_error_t **error"
 .Ft int
-.Fn libfcache_identifier_copy_to_utf8_string "libfcache_identifier_t *identifier, uint8_t *utf8_string, size_t utf8_string_size, uint32_t string_format_flags, libfcache_error_t **error"
+.Fn libfcache_cache_set_value_by_index "libfcache_cache_t *cache, int cache_entry_index, int file_index, off64_t offset, time_t timestamp, intptr_t *value, int (*free_value)( intptr_t **value, libfcache_error_t **error ), uint8_t flags, libfcache_error_t **error"
+.Pp
+Cache value functions
 .Ft int
-.Fn libfcache_identifier_copy_to_utf8_string_with_index "libfcache_identifier_t *identifier, uint8_t *utf8_string, size_t utf8_string_size, size_t* utf8_string_index, uint32_t string_format_flags, libfcache_error_t **error"
+.Fn libfcache_cache_value_get_identifier "libfcache_cache_value_t *cache_value, int *file_index, off64_t *offset, time_t *timestamp, libfcache_error_t **error"
 .Ft int
-.Fn libfcache_identifier_copy_from_utf16_string "libfcache_identifier_t *identifier, const uint16_t *utf16_string, size_t utf16_string_length, uint32_t string_format_flags, libfcache_error_t **error"
+.Fn libfcache_cache_value_set_identifier "libfcache_cache_value_t *cache_value, int file_index, off64_t offset, time_t timestamp, libfcache_error_t **error"
 .Ft int
-.Fn libfcache_identifier_copy_from_utf16_string_with_index "libfcache_identifier_t *identifier, const uint16_t *utf16_string, size_t utf16_string_length, size_t* utf16_string_index, uint32_t string_format_flags, libfcache_error_t **error"
+.Fn libfcache_cache_value_get_value "libfcache_cache_value_t *cache_value, intptr_t **value, libfcache_error_t **error"
 .Ft int
-.Fn libfcache_identifier_copy_to_utf16_string "libfcache_identifier_t *identifier, uint16_t *utf16_string, size_t utf16_string_size, uint32_t string_format_flags, libfcache_error_t **error"
-.Ft int
-.Fn libfcache_identifier_copy_to_utf16_string_with_index "libfcache_identifier_t *identifier, uint16_t *utf16_string, size_t utf16_string_size, size_t* utf16_string_index, uint32_t string_format_flags, libfcache_error_t **error"
-.Ft int
-.Fn libfcache_identifier_copy_from_utf32_string "libfcache_identifier_t *identifier, const uint32_t *utf32_string, size_t utf32_string_length, uint32_t string_format_flags, libfcache_error_t **error"
-.Ft int
-.Fn libfcache_identifier_copy_from_utf32_string_with_index "libfcache_identifier_t *identifier, const uint32_t *utf32_string, size_t utf32_string_length, size_t* utf32_string_index, uint32_t string_format_flags, libfcache_error_t **error"
-.Ft int
-.Fn libfcache_identifier_copy_to_utf32_string "libfcache_identifier_t *identifier, uint32_t *utf32_string, size_t utf32_string_size, uint32_t string_format_flags, libfcache_error_t **error"
-.Ft int
-.Fn libfcache_identifier_copy_to_utf32_string_with_index "libfcache_identifier_t *identifier, uint32_t *utf32_string, size_t utf32_string_size, size_t* utf32_string_index, uint32_t string_format_flags, libfcache_error_t **error"
+.Fn libfcache_cache_value_set_value "libfcache_cache_value_t *cache_value, intptr_t *value, int (*free_value)( intptr_t **value, libfcache_error_t **error ), uint8_t flags, libfcache_error_t **error"
 .Sh DESCRIPTION
 The
 .Fn libfcache_get_version
